# running-data-sync

./: .eslintrc  .eslintrc.base.js  .eslintrc.js  .eslintrc.json  .gitignore  .npmrc  .pdm-python  .pdm.toml  .prettierrc.js  .python-version  AGENTS.md  Pipfile  README.md  eslint.config.js  gatsby-config.js  gatsby-node.js  index.html  index.js  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  python-web.code-workspace  requirements-dev.txt  requirements.txt  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts  wrangler.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: automerge.yml  codeql-analysis.yml  dependabot.yml  get-fit.yml  get_fit.yml  gh-pages.yml  run-data-sync.yml  run_data_sync.yml  run_data_sync_beta.yml  sync-upstream.yml
FIT_OUT/: 2020-06-08-091149-Walking-Duan’s Apple Watch.fit  2020-06-08-195131.fit  2020-06-11-090702-Walking-Duan’s Apple Watch.fit  2020-06-11-180616-W.fit  2020-06-12-095947.fit  2020-06-13-195108.fit  2020-06-14-131033.fit  2020-06-15-090743.fit  2020-06-16-095948-Walking-Duan’s Apple Watch.fit  2020-06-19-090526.fit  2020-06-20-174429-W.fit  2020-06-28-085354-W.fit  2020-06-30-180803-Walking-Duan’s Apple Watch.fit  2020-07-01-085759-Walking-Duan’s Apple Watch.fit  2020-07-03-180615.fit  2020-07-04-165109.fit  2020-07-05-200626-R.fit  2020-07-06-180715-W.fit  2020-07-06-193940-Indoor Running-Duan’s Apple Watch.fit  2020-07-08-194012-Running-Duan’s Apple Watch.fit  2020-07-10-162159-Walking-Duan’s Apple Watch.fit  2020-07-10-194454-Running-Duan’s Apple Watch.fit  2020-07-12-184158-Running-Duan’s Apple Watch.fit  2020-07-15-195102.fit  2020-07-18-085951-Running-Duan’s Apple Watch.fit  2020-07-18-154836.fit  2020-07-21-193236-Running-Duan’s Apple Watch.fit  2020-07-28-091124-Running-Duan’s Apple Watch.fit  2020-07-29-090004-Walking-Duan’s Apple Watch.fit  2020-07-30-090143-Running-Duan’s Apple Watch.fit  2020-07-31-195914.fit  2020-08-02-195053-Running-Duan’s Apple Watch.fit  2020-08-05-085920-Walking-Duan’s Apple Watch.fit  2020-08-06-200505.fit  2020-08-07-091444-Walking-Duan’s Apple Watch.fit  2020-08-07-195545-Running-Strava.fit  2020-08-09-193206.fit  2020-08-11-091540.fit  2020-08-13-181643-Walking-Duan’s Apple Watch.fit  2020-08-14-085519-Walking-Duan’s Apple Watch.fit  (+666 more)
GPX_OUT/: 1575760369000.gpx  1591412706000.gpx  1591587498000.gpx  1591673829000.gpx  1591761100000.gpx  1591847308000.gpx  1592020182000.gpx  1592106532000.gpx  1593922009000.gpx  1594006815000.gpx  1595302371000.gpx  1596340266000.gpx  1596943926000.gpx  1597405972620.gpx  1597895837000.gpx  1598528182943.gpx  1598963324397.gpx  1599052553027.gpx  1599221180636.gpx  1599312696655.gpx  1599396140741.gpx  1599565607646.gpx  1599656316202.gpx  1599738914294.gpx  1599823158628.gpx  1599915761408.gpx  1600002202251.gpx  1600174487232.gpx  1600263373567.gpx  1600430379340.gpx  1600516981197.gpx  1600602803448.gpx  1600692718216.gpx  1600779351420.gpx  1601120488418.gpx  1601557784962.gpx  1601618998557.gpx  1602255245679.gpx  1602329794821.gpx  1602418243125.gpx  (+854 more)
activities/: 1597405972620.json  1598528182943.json  1598963324397.json  1599052553027.json  1599221180636.json  1599312696655.json  1599396140741.json  1599565607646.json  1599656316202.json  1599738914294.json  1599823158628.json  1599915761408.json  1600002202251.json  1600174487232.json  1600430379340.json  1600516981197.json  1600602803448.json  1600692718216.json  1600779351420.json  1601120488418.json  1601557784962.json  1601618998557.json  1602255245679.json  1602329794821.json  1602418243125.json  1602589788425.json  1602681860670.json  1602851089087.json  1603020212763.json  1603106865868.json  1603197682806.json  1603281043311.json  1603457590065.json  1603547522357.json  1603623814362.json  1603715271275.json  1603971501323.json  1604232011348.json  1604304224400.json  1604403633905.json  (+152 more)
public/: ads.txt
public/assets/: index.tsx
public/db/: activities.parquet  activities_flyby.parquet
scripts/: __init__.py  config.py  data.db  data.duckdb  data.parquet  encrypt_db.py  exceptions.py  export_fit.py  fit_to_garmin_sync.py  garmin_device_adaptor.py  garmin_sync.py  gen_svg.py  get_garmin_secret.py  gpx_sync.py  joyrun_sync.py  keep_sync.py  nike_sync.py  nike_to_strava_sync.py  polyline_processor.py  runtastic_sync.py  save_to_parqent.py  save_to_parquet.py  strava_sync.py  strava_to_garmin_sync.py  stravaweb_to_garmin_sync.py  synced_data_file_logger.py  type_defs.py  upload_strava.py  utils.py  validate_data_consistency.py
src/: main.tsx
tests/: conftest.py  test_config.py  test_export_fit.py  test_generator_db.py  test_gpxtrackposter_track.py  test_gpxtrackposter_utils.py  test_polyline_processor.py  test_strava_cli_core.py  test_synced_data_file_logger.py  test_utils.py
(+122 files in other folders)
