[project]
name = "running-data-sync"
description = "Default template for PDM package"
authors = [{ name = "shaonianche", email = "github@duanfei.org" }]
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "httpx",
  "gpxpy==1.4.2",
  "stravalib",
  "appdirs>=1.4.0",
  "svgwrite>=1.1.9",
  "colour>=0.1.5",
  "s2sphere",
  "arrow",
  "geopy",
  "polyline",
  "timezonefinder",
  "tzfpy; platform_system != \"Windows\"",
  "pyyaml",
  "aiofiles",
  "cloudscraper==1.2.58",
  "tcxreader",
  "rich",
  "lxml",
  "eviltransform",
  "stravaweblib",
  "tenacity",
  "numpy",
  "tzlocal",
  "fit-tool",
  "garmin-fit-sdk",
  "haversine==2.8.0",
  "garth",
  "certifi==2025.1.31",
  "pycryptodome",
  "duckdb",
  "pandas",
]

[dependency-groups]
dev = ["ruff>=0.12.2"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
extra-paths = ["scripts"]
