[project]
name = "running-data-sync"
description = "Default template for PDM package"
authors = [{ name = "shaonianche", email = "github@duanfei.org" }]
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "httpx",
  "gpxpy==1.4.2",
  "stravalib",
  "appdirs>=1.4.0",
  "svgwrite>=1.1.9",
  "colour>=0.1.5",
  "s2sphere",
  "arrow",
  "geopy",
  "polyline",
  "timezonefinder",
  "tzfpy; platform_system != \"Windows\"",
  "pyyaml",
  "aiofiles",
  "cloudscraper==1.2.58",
  "tcxreader",
  "rich",
  "lxml",
  "eviltransform",
  "stravaweblib",
  "tenacity",
  "numpy",
  "tzlocal",
  "fit-tool @ git+https://github.com/shaonianche/python_fit_tool.git@main",
  "garmin-fit-sdk",
  "haversine==2.8.0",
  "garth",
  "certifi==2025.1.31",
  "pycryptodome",
  "duckdb",
  "pandas",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ty>=0.0.14",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
strava_sync = "python -m scripts.cli.strava_sync"
garmin_sync = "python -m scripts.cli.garmin_sync"
export_fit = "python -m scripts.cli.export_fit"
fit_to_garmin_sync = "python -m scripts.cli.fit_to_garmin_sync"
strava_to_garmin_sync = "python -m scripts.cli.strava_to_garmin_sync"
stravaweb_to_garmin_sync = "python -m scripts.cli.stravaweb_to_garmin_sync"
gen_svg = "python -m scripts.cli.gen_svg"
gpx_sync = "python -m scripts.cli.gpx_sync"
save_to_parquet = "python -m scripts.cli.save_to_parquet"
get_garmin_secret = "python -m scripts.cli.get_garmin_secret"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
extra-paths = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["scripts"]
